--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_LOCAL_EYEDENTITY = "mongodb://localhost/eyedentity"
 PRIVATE_KEY = "eyedentity"
+DB_EYEDENTITY = mongodb+srv://sonyCoffee:kohend789@sony-23mfl.mongodb.net/test?retryWrites=true&w=majority
